UserController: Adds email to register endpoint
